[package]
name = "tengwar"
description = "Transliterate latin text into J.R.R. Tolkien's Tengwar."
version = "0.7.1"

authors = ["Yaulendil <davarice@protonmail.com>"]
repository = "https://github.com/yaulendil/tengwar-rs"
readme = "README.md"

exclude = ["/.idea", "*.txt"]
categories = ["command-line-utilities", "text-processing"]
keywords = ["text", "unicode", "tengwar", "quenya", "sindarin"]

edition = "2018"
license = "Apache-2.0"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"


[dependencies]
argh = "0.1.4"
itertools = "0.10.0"


[features]
default = ["long-vowel-double", "nuquernar"]

# Use alternate Sa-rincë for tengwar that support it.
alt-rince = []
# Tri-dot tehta for "A" is replaced with the circumflex-like variant.
circumflex = []
long-vowel-double = []
long-vowel-unique = []
# Silmë and Essë are inverted when they take a tehta.
nuquernar = []

# TODO: Make some of these features into command line switches.
