[package]
name = "tengwar"
description = "Transliterate latin text into J.R.R. Tolkien's Tengwar."
version = "0.9.0-dev"

authors = ["Yaulendil <davarice@protonmail.com>"]
repository = "https://github.com/yaulendil/tengwar-rs"
readme = "README.md"

exclude = ["/.idea", "*.sh", "*.txt"]
categories = ["command-line-utilities", "text-processing"]
keywords = ["text", "unicode", "tengwar", "quenya", "sindarin"]

edition = "2021"
license = "Apache-2.0"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"


[dependencies]
cfg-if = "1.0.0"
itertools = "0.10.0"

[dependencies.clap]
version = "4.0.18"
features = ["cargo", "derive", "wrap_help"]


[features]
default = ["long-vowel-double"]

# Use standard Unicode characters for dot punctuation.
dots-standard = []
long-vowel-double = []
long-vowel-unique = []
