[package]
name = "tengwar"
description = "Transliterate latin text into J.R.R. Tolkien's Tengwar."
version = "0.10.0-dev"

authors = ["Yaulendil <davarice@protonmail.com>"]
repository = "https://github.com/yaulendil/tengwar-rs"
readme = "README.md"

exclude = ["/.idea", "*.sh", "*.txt"]
categories = ["command-line-utilities", "text-processing"]
keywords = ["text", "unicode", "tengwar", "quenya", "sindarin"]

edition = "2021"
license = "Apache-2.0"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"


[dependencies]
cfg-if = "1.0.0"
itertools = "0.10.0"
unicode-normalization = "0.1.22"

[dependencies.clap]
version = "4.0.18"
features = ["cargo", "derive", "wrap_help"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]
optional = true


[features]
default = []

# Use the codepoints in the ConScript Unicode Registry, rather than the official
#   codepoints in the Supplementary Multilingual Plane. This feature does not
#   yet do anything, because the codepoints in the SMP have not been approved,
#   but it exists in advance for any dependents to opt out of the switch ahead
#   of time.
# We may be waiting for a while.
csur = []

# Use standard Unicode characters for dot punctuation.
dots-standard = []
